# fbio

./: .gitignore  Cargo.toml  Readme.md
benches/: fast_encoding.rs  iter_cano.rs  nuc2bit.rs
fbio/: __init__.py  __main__.py  criterion.py  nuc2bit.py
src/: iter_cano.rs  lib.rs  nuc2bit.rs  nuc2bit_phf.rs
