[package]
name = "fbio"
version = "0.1.0"
authors = ["Pierre Marijon <pmarijon@mpi-inf.mpg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cano_iter
cocktail = { git="https://github.com/natir/cocktail.git" }

# nuc2bit
phf = { version = "0.8", features = ["macros"] }

# encoding impact
kmers = { git="https://github.com/COMBINE-lab/kmers.git" }

[dev-dependencies]
rand      = "0.7"
criterion = "0.3"

[[bench]]
name = "iter_cano"
harness = false

[[bench]]
name = "nuc2bit"
harness = false

[[bench]]
name = "fast_encoding"
harness = false